
syntax = "proto3";

package aiserver.v1;



// 因为还不能检测是否依赖这个 proto 文件，所以先手动 import 一下
import "google/protobuf/timestamp.proto";



      
service AutopilotService {

  rpc StreamAutopilot(AutopilotRequest) returns (AutopilotResponse);
}


enum SubAgent {
  SUB_AGENT_UNSPECIFIED = 0;
  SUB_AGENT_TERMINAL_AGENT = 1;
  SUB_AGENT_WEB_AGENT = 2;
  SUB_AGENT_PROGRAMMER_AGENT = 3;
}



message AutopilotResponse {
  AutopilotActionResponse action = 1;
  AutopilotDone done = 2;
  AutopilotStreamThought stream_thought = 3;
  AutopilotStartSubAgent start_sub_agent = 4;
  AutopilotDoneSubAgent done_sub_agent = 5;
  RawResponse raw_response = 10;
  AutopilotPaused paused = 11;
  
}
  


message AutopilotActionResponse {
  TerminalCommandResponse terminal_command = 1;
  WebSearchResponse web_search = 2;
  AskUserResponse ask_user = 3;
  AskOracleResponse ask_oracle = 4;
  FileEditResponse file_edit = 5;
  OpenFileResponse open_file = 6;
  
}
  


message RawResponse {
  string response = 1;
  
}
  


message AutopilotRequest {
  string request_id = 1;
  string working_directory = 7;
  string current_directory_files = 8;
  AutopilotFile related_files = 9;
  AutopilotActionRequest action = 4;
  AutopilotStart start = 5;
  AutopilotPause pause = 11;
  AutopilotDone done = 6;
  AutopilotContinue continue = 12;
  AutopilotError error = 10;
  
}
  


message AutopilotFile {
  string absolute_path = 1;
  string content = 2;
  
}
  


message AutopilotActionRequest {
  TerminalCommandRequest terminal_command = 1;
  WebSearchRequest web_search = 2;
  AskUserRequest ask_user = 3;
  AskOracleRequest ask_oracle = 4;
  FileEditRequest file_edit = 5;
  OpenFileRequest open_file = 6;
  
}
  


message AutopilotError {
  string error = 1;
  
}
  


message OpenFileRequest {
  string content = 2;
  string absolute_path = 1;
  
}
  


message OpenFileResponse {
  string absolute_path = 1;
  
}
  


message FileEditRequest {
  string diff = 1;
  
}
  


message FileEditResponse {
  string absolute_path = 1;
  string query = 2;
  
}
  


message AskOracleRequest {
  string answer = 1;
  
}
  


message AskOracleResponse {
  string question = 1;
  SubAgent original_sub_agent = 2;
  
}
  


message AskUserRequest {
  string answer = 1;
  
}
  


message AskUserResponse {
  string question = 1;
  
}
  


message WebSearchRequest {
  string query = 1;
  
}
  


message WebSearchResponse {
  string answer = 1;
  
}
  


message TerminalCommandRequest {
  string response = 1;
  
}
  


message TerminalCommandResponse {
  string command = 1;
  optional double timeout = 2;
  optional bool is_run_server = 3;
  
}
  


message AutopilotPaused {
  string response = 1;
  
}
  


message AutopilotPause {
  
}
  


message AutopilotStart {
  string task = 1;
  
}
  


message AutopilotContinue {
  
}
  


message AutopilotDone {
  
}
  


message AutopilotDoneSubAgent {
  string response = 1;
  
}
  


message AutopilotStartSubAgent {
  string task = 1;
  SubAgent sub_agent = 2;
  
}
  


message AutopilotStreamThought {
  string thought = 1;
  
}
  

